# captoglove_ros_wrapper

./: CMakeLists.txt  README.md  package.xml
include/: config_left.ini  config_right.ini
include/captoglove_ros/: captoglove_ros.h  ros_translate.h
launch/: captoglove_ros_wrapper.launch
src/: captoglove_ros.cpp  ros_translate.cpp
